# listen

./: .env.example  .gitignore  .mpdignore  .typos.toml  Cargo.toml  README.md  call.sh  flake.nix  graph.py  listen.ron  shell.nix
.github/workflows/: graph.yml  rust.yml  typos.yml
src/: args.rs  cache.rs  channel.rs  color.rs  entry.rs  env.rs  fetch.rs  main.rs  meta_brainz.rs  music_brainz.rs  open.rs  parse.rs  playlist.rs  refresh.rs  remove.rs  report.rs  streaming_source.rs
src/cache/: mod.rs  username.rs
src/declaration/: mod.rs  parse.rs
src/fetch/: mod.rs  streaming_source.rs
src/filter/: add.rs  existing.rs  mod.rs  remove.rs  sort.rs
src/match/: duration.rs  form.rs  keep.rs  link.rs  matching.rs  mod.rs  no_link.rs  open.rs  query.rs  record.rs  redirect.rs  search.rs  upgrade.rs  verify.rs
src/match/find/: form.rs  matching.rs  miss.rs  mod.rs  query.rs  search.rs  text.rs
src/match/output/: clipboard.rs  mod.rs
src/outlier/: age.rs  analyze.rs  fetch.rs  meta.rs  mod.rs  render.rs  song.rs
src/outlier/cache/: listen.rs  mod.rs  username.rs
src/outlier/interactive/: apply.rs  mod.rs  play.rs
src/playlist/: mod.rs  sync.rs
src/rate/: agent.rs  cache.rs  mod.rs  submit.rs  value.rs
src/rate/auth/: client.rs  token.rs
src/recommend/: consider.rs  declared.rs  declined.rs  fetch.rs  mod.rs
src/streaming_source/: mod.rs  run.rs  soundcloud.rs  youtube.rs
src/sync/: channel.rs  fetch.rs  mod.rs  playlist.rs  progress.rs  remove.rs  report.rs  tag.rs
src/sync/filter/: add.rs  mod.rs  remove.rs  sort.rs
src/sync/rate/: agent.rs  cache.rs  mod.rs  submit.rs  value.rs
src/sync/rate/auth/: client.rs  login.rs  mod.rs  token.rs
src/sync/refresh/: metadata.rs  mod.rs
