[package]
name = "fl"
version = "0.1.0"
edition = "2021"
authors = ["adelille <alexandre.delille.57@gmail.com>"]
description = "fetch declared listens and organize them"

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
hmerr = { git = "https://github.com/Alexdelia/yahmrslib.git" }
ansi = { git = "https://github.com/Alexdelia/yahmrslib.git" }
ux = { git = "https://github.com/Alexdelia/yahmrslib.git" }
async-std = { version = "1", features = ["tokio1"] }
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
ron = "0.11"
clap = { version = "4", features = ["derive"] }
indicatif = "0.18"
musicbrainz_rs_nova = "0.8"
id3 = "1"
