[package]
name = "declarative_listen"
version = "0.1.0"
edition = "2024"
authors = ["Alexdelia <alexandre.delille.57@gmail.com>"]
description = "fetch declared listens and organize them"

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
hmerr = { git = "https://github.com/Alexdelia/yahmrslib.git" }
ansi = { git = "https://github.com/Alexdelia/yahmrslib.git", features = ["gen"] }
ux = { git = "https://github.com/Alexdelia/yahmrslib.git" }
async-std = { version = "1", features = ["tokio1"] }
chrono = { version = "0.4", default-features = false, features = [
	"serde",
	"clock",
] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde"] }
ron = "0.12"
ureq = "3"
clap = { version = "4", features = ["derive"] }
indicatif = "0.18"
musicbrainz_rs = { version = "0.13", default-features = false, features = [
	"async",
	"rate_limit",
	"rustls",
] }
api_bindium = { version = "0.4", features = ["rate_limit"] }
id3 = "1"
wana_kana = { version = "5", default-features = false }
const_format = "0.2"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
suspicious = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
